Bug 332673 - Notes don't appear in summary view unless I go into Pop-up notes
Summary: Notes don't appear in summary view unless I go into Pop-up notes
Status: RESOLVED FIXED
Alias: None
Product: kontact
Classification: Applications
Component: summary (other bugs)
Version First Reported In: 4.13 Pre
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-03-27 10:12 UTC by Mark Fraser
Modified: 2014-04-09 07:26 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.13
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mark Fraser 2014-03-27 10:12:50 UTC
If I start Kontact in summary view, there are no notes showing. If I go into the pop-up notes plug-in and then go back to the summary view, the notes are now visible.

Reproducible: Always

Steps to Reproduce:
1. Open Kontact in summary view
2. See that no notes are visible
3. Go into popup notes and then back to summary view
4. See that the notes are now there
Comment 1 Laurent Montel 2014-03-27 21:07:14 UTC
I confirm it.
I didn't find yet the bug.
I continue to investigate
Comment 2 Samuel 2014-03-29 20:32:13 UTC
I am also having trouble with Popup Notes in that it does not load my notes file in ~.kde/share/apps/knotes/notes.ics.  Summary View does not show any notes and I cannot add notes with the New Popup Note option, ie it does nothing.  

In System Settings > Personal Information, I have defined Local Notes with the notes.ics Filename.  Basically Popup Notes is currently totally unuseable.
Comment 3 Samuel 2014-03-29 22:20:41 UTC
I forgot to mention that the problems that I am having with Popup Notes only came with the latest version of KDE, ie KDE 4.12.95.  Previous versions worked to my satisfaction.  I hope this is fixed by the release of KDE 4.13.
Comment 4 Laurent Montel 2014-03-30 10:28:17 UTC
(In reply to comment #2)
> I am also having trouble with Popup Notes in that it does not load my notes
> file in ~.kde/share/apps/knotes/notes.ics.  Summary View does not show any
> notes and I cannot add notes with the New Popup Note option, ie it does
> nothing.  
> 
> In System Settings > Personal Information, I have defined Local Notes with
> the notes.ics Filename.  Basically Popup Notes is currently totally
> unuseable.

Please create a new bug report about it.
And in 4.13 we migrate to akonadi so it will not read .ics
Comment 5 Laurent Montel 2014-04-09 07:26:53 UTC
Git commit 6f2ff99b17b351fbffa5c0bf925db4ae739476f8 by Montel Laurent.
Committed on 09/04/2014 at 07:26.
Pushed by mlaurent into branch 'KDE/4.13'.

Fix Bug 332673 - Notes don't appear in summary view unless I go into Pop-up notes

FIXED-IN: 4.13

M  +8    -3    kontact/plugins/knotes/summarywidget.cpp

http://commits.kde.org/kdepim/6f2ff99b17b351fbffa5c0bf925db4ae739476f8