Fix Bug 332673 - Notes don't appear in summary view unless I go into Pop-up notes

FIXED-IN: 4.13
BUG: 332673