plugins/knotes/summarywidget.cpp
@@ -114,12 +114,17 @@ void KNotesSummaryWidget::updateFolderList()
         return;
     mInProgress = true;
     qDeleteAll( mLabels );
-    int counter = 0;
     mLabels.clear();
+    int counter = 0;
+
     mModelState->restoreState();
     displayNotes(QModelIndex(), counter);
-    qDebug()<<"void KNotesSummaryWidget::updateFolderList() ";
     mInProgress = false;
+    QList<QLabel*>::const_iterator lit;
+    QList<QLabel*>::const_iterator lend( mLabels.constEnd() );
+    for ( lit = mLabels.constBegin(); lit != lend; ++lit ) {
+        (*lit)->show();
+    }
 }
 
 void KNotesSummaryWidget::displayNotes( const QModelIndex &parent, int &counter)
@@ -131,7 +136,7 @@ void KNotesSummaryWidget::displayNotes( const QModelIndex &parent, int &counter)
                 mModelProxy->data( child,
                                   Akonadi::EntityTreeModel::ItemRole ).value<Akonadi::Item>();
         if (item.isValid()) {
-            qDebug()<<" createNote ";
+            qDebug()<<" createNote "<<counter;
             createNote(item, counter);
             ++counter;
         }
